--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -4,14 +4,14 @@ description: |
   Bienvenue sur ce blog ! 
 author:
   - name: Maxime Agator 
-    url: https://example.com/norajones
-    affiliation: Spacely Sprockets
-    affiliation_url: https://example.com/spacelysprokets
+    url: {https://mxagat.github.io/donnees-de-curiosite/}
+  
 date: 06-18-2021
 output:
   distill::distill_article:
     self_contained: false
-draft: true 
+categories: infos
+preview: media/colorful.jpg 
 ---
 
 ```{r setup, include=FALSE}
@@ -21,27 +21,43 @@ knitr::opts_chunk$set(echo = FALSE)
 # https://rstudio.github.io/distill/blog.html
 
 ```
-Bienvenue sur ce blog ! 
 
-Vous trouverez ici des analyses de données sur des thèmes aussi divers que le vélo et les transports urbains, la corruption, la démographie, ou - en toute originalité - le covid 19. Ce cabinet de curiosité numérique répond, comme ceux du XIXème, d'abord à la curiosité et aux intérêts de son propriétaire.
-
-L'idée d'un tel blog m'est apparue lors de mon apprentissage du logiciel statistique R, en parallèle de ma thèse en sociologie. D'un côté, j'ai été émerveillé - n'ayons pas peur des mots -  par les possibilités offertes par l'analyse des données pour comprendre les évolutions de notre société et, in fine, pouvoir agir en connaissance de cause. Je ne parle pas ici de modèles statistiques ultra-sophistiqués, de machine learning et autre méthode de pointe comme l'utilisation de réseau de neurones, mais bien de méthodes statistiques descriptives qui permettent de cerner les grandes dimensions d'un phénomène.  D'un autre coté, il est toujours surprenant de constater à quel point même cet usage simple des données reste rare, et comme ce potentiel est sous exploité, y compris par les professionnels les plus intéressés par des connaissances solides.
-
-Les raisons à cela sont sans doute nombreuses : sources  de données mal connues ou identifiées, manque de formation statistique, ou encore poids des habitudes. Comment expliquer sinon la place royale réservée à la moyenne, indicateur souvent trompeur (on rapelle la plaisanterie de statisticiens : "quand Bill Gates rentre dans un bar, en moyenne tous les clients sont millionaires"). Pourquoi ne pas s'intéresser à la médiane, ou encore mieux à la distribution des fréquences, souvent bien plus éclairantes, sans être inaccesibles ?
-
-![Un bon contre-exemple, distribution des richesses par Philippe Rioux / La dépêche du midi, 2018 ](distribution.jpg) 
-
-Une fois mis en évidence, les résultats de l'analyse devraient idéalement être interprétés dans leur contexte pour atteindre leur plein potentiel. C'est cependant un exercice difficile à réaliser. Et pour cause, il mobilise des des informations et des outils intellectuels extérieurs, qu'ils soient issus d'une connaissance de terrain, d'une expertise professionnelle ou d'une discipline scientifique comme la sociologie. 
-
-A sa modeste échelle et sans prétention scientifique, ce blog tentera de montrer qu'il est possible d'en apprendre beaucoup sur des sujets de société qui nous entourrent à partir de données bien employées, de méthodes statistiques simples et de quelques outils de réflexion.
-
-Vos remarques et commentaires seront les bienvenus.
-
-Bonne lecture !
-
-Maxime Agator
+```{=html}
+<style>
+body {
+text-align: justify}
+</style>
+```
 
 
-*Sources :*
 
-"Riche, pauvre : quel Français êtes-vous ?" La dépêche du midi, 07/06/2018. https://www.ladepeche.fr/article/2018/06/07/2812978-riche-pauvre-quel-francais-etes-vous.html 
+
+
+
+## Bienvenue sur ce blog !
+
+Vous trouverez ici des analyses de données sur des thèmes aussi divers que le vélo et les transports urbains, la corruption, la démographie, ou - en toute originalité - le covid 19. Ce cabinet de curiosité numérique répond, comme ceux du XIXème, d'abord à la curiosité de son propriétaire, mais en laissant bien sûr de côté la recherche d'exotisme propre à la période coloniale.
+
+![La data des magazines](media/colorful.jpg)
+
+
+L'idée de ce blog est née lors de mon apprentissage du logiciel statistique R au cours de mes années de thèse en sociologie. D'un côté, j'ai été émerveillé - n'ayons pas peur des mots - par les possibilités offertes par l'analyse des données pour comprendre les phénomènes sociaux et, in fine, pouvoir agir en connaissance de cause. Je ne parle pas même ici de modèles statistiques très poussés comme le machine learning les réseaux de neurones, mais bien de méthodes statistiques descriptives bien utilisées pour cerner les grandes dimensions d'un phénomène. Il est toujours surprenant de constater à quel point même cet usage simple des données reste rare, et comme ce potentiel est sous exploité, y compris par les professionnels de l'information et des connaissances.
+
+Comment cela s'explique-t-il ? Les raisons à cela sont sans doute nombreuses : sources de données mal connues ou identifiées, manque de formation statistique, ou encore poids des habitudes. Comment expliquer sinon la place royale réservée dans la presse à un outil comme la moyenne, un indicateur souvent trompeur ? Rappelons la plaisanterie de statisticiens : "quand Bill Gates rentre dans un bar, en moyenne tous les clients sont millionaires". En l'occurrence, on gagnerait souvent à s'intéresser à la médiane, ou encore mieux à la distribution des fréquences, souvent bien plus parlante.
+
+![Un bon contre-exemple, distribution des richesses par Philippe Rioux / La dépêche du midi, 2018 [^1]](media/distribution.jpg)
+
+
+Cependant il s'agit là de technique, et la technique statistique, aussi importante soit-elle, ne suffit pas : pour comprendre un phénomène social, il faut toujours aussi interpréter, même Si c'est un exercice difficile. Et pour cause, interpréter implique de mobiliser des informations ou des concepts extérieurs à la technique mathématique, qu'ils soient issus d'une connaissance de terrain, d'une expertise professionnelle ou d'une discipline scientifique comme la sociologie.
+
+A sa modeste échelle et sans prétention scientifique, ce blog offrira donc un cadre pour mes explorations curieuses et permettra peut-être de montrer qu'avec des **données bien employées et de méthodes statistiques simples, on peut comprendre davantage et - sait-on jamais ? - agir mieux**.
+
+Vos remarques et commentaires constructifs seront évidemment les bienvenus.
+
+**Bonne lecture !**
+
+*Maxime Agator*
+
+
+
+[^1]: Riche, pauvre : quel Français êtes-vous ?" La dépêche du midi, 07/06/2018. <https://www.ladepeche.fr/article/2018/06/07/2812978-riche-pauvre-quel-francais-etes-vous.html>
