--- a/_posts/2021-06-21-lancement-du-blog/Lancement du blog.Rmd
+++ b/_posts/2021-06-21-lancement-du-blog/Lancement du blog.Rmd
@@ -14,6 +14,10 @@ categories: infos
 preview: media/colorful.jpg 
 ---
 
+<style>
+body {
+text-align: justify}
+</style>
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
