--- a/about.Rmd
+++ b/about.Rmd
@@ -1,19 +1,22 @@
 ---
 title: "A propos de ce blog"
-description: |
-  Some additional details about the blog
+
+  
 ---
 
+<style>
+body {
+text-align: justify}
+</style>
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-A la façon des anciens cabinets de curiosité, ce blog rassemble des objets hétéroclites dont le seul point commun est d'avoir un jour suscité l'intérêt et le désir de comprendre du propriétaire des lieux, Maxime Agator, actuellement doctorant en sociologie à l'EHESS.
+Blog personnel d'analyses de données alimenté par Maxime Agator. 
 
-Ce blog part du principe qu'à l'âge des data, bien des questions peuvent trouver leurs réponses pour peu que l'on s'efforce d'identifier les bonnes données et, surtout, de bien les analyser. Vous trouverez donc ici essais d'analyses et interprétations de données permettant de mieux comprendre divers sujets de société, à partir de sources le plus souvent librement accessibles.
+Je réalise ici des analyses de données sur divers sujets de société en fonction de ma curiosité et des outils statistiques et numériques que je souhaite pratiquer, principalement à l'aide du logiciel R. 
 
-D'un point de vue technique, les analyses s'appuient principalement sur le logiciel statistique libre R et l'ensemble du blog est realisé avec le package Distill for R Markdown. 
 
 Si les données et le code sont partagés en licence GNU GPL 3, les graphiques et textes d'analyse restent la propriété de leur auteur.
 
-Commentaires et remarques sont les bienvenues. Bonne lecture !
+Commentaires et remarques constructives sont les bienvenues. Bonne lecture !
