--- a/_posts/2021-06-21-lancement-du-blog/Lancement du blog.Rmd
+++ b/_posts/2021-06-21-lancement-du-blog/Lancement du blog.Rmd
@@ -40,21 +40,21 @@ text-align: justify}
 
 ## Bienvenue sur ce blog !
 
-Vous trouverez ici des analyses de données sur des thèmes aussi divers que les transports urbains, la délinquance, la démographie, ou - en toute originalité - la santé et le covid 19. L'idée de ce blog est née lors de mon apprentissage du logiciel de statistiques R au cours de mes années de thèse en sociologie. J'ai été fasciné par les possibilités offertes par l'analyse des données pour comprendre les phénomènes sociaux à petite ou grande échelle, et, in fine, pouvoir agir en connaissance de cause. Sans prétention scientifique, ce blog est l'endroit où je propose des analyses au fil de mes inspirations, sorte de petit cabinet de curiosités numérique. D'où le nom : données de curiosité.
+Vous trouverez ici des analyses de données sur des thèmes aussi divers que les transports urbains, la délinquance, la démographie, ou - en toute originalité - la santé et le covid 19. C'est aussi un portfolio pour mes projets personnels. L'idée de ce blog est née lors de mon apprentissage du logiciel de statistiques R au cours de mes années de thèse en sociologie. J'ai été fasciné par les possibilités offertes par l'analyse des données pour comprendre les phénomènes sociaux à petite ou grande échelle, et, in fine, pouvoir agir en connaissance de cause. Sans prétention scientifique, ce blog est l'endroit où je propose des analyses au fil de mes inspirations, sorte de petit "cabinet de curiosités" numérique. D'où le nom : données de curiosité.
 
 ![La data vue par les magazines](media/colorful.jpg)
 
 
-Le but n'est pas de mettre avant ici des techniques statistiques très poussées comme le machine learning les réseaux de neurones, mais bien des méthodes statistiques descriptives efficaces pour cerner les grandes dimensions d'un phénomène. Il est toujours surprenant de constater à quel point, à l'heure de la généralisation de l'open data et de l'usage massif des données, le potentiel d'analyses de données simples reste sous-exploité, y compris par des professionnels.
+Tous les articles ici n'emploient pas des méthodes statistiques poussées comme l'IA, le machine learning ou les réseaux de neurones - même si cela fait partie du programme. Parfois, des méthodes statistiques descriptives très classiques sont efficaces pour cerner les grandes dimensions d'un phénomène. Il est toujours surprenant de constater à quel point, à l'heure de la généralisation de l'open data et de l'usage massif des données, le potentiel d'analyses de données simples reste sous-exploité.
 
-Par exemple, comment expliquer la place centrale réservée dans la presse à un outil comme la moyenne, un indicateur souvent trompeur ? Rappelons la plaisanterie de statisticiens : "quand Bill Gates rentre dans un bar, en moyenne tous les clients sont millionaires". En l'occurrence, on gagnerait souvent à s'intéresser à la médiane, ou encore mieux à la distribution des fréquences, souvent bien plus parlante et éclairante visuellement.
+Par exemple, comment expliquer la place centrale réservée dans la presse à un indicateur comme la moyenne, pourtant souvent trompeur ? Selon l'humour de statisticien : "quand Bill Gates rentre dans un bar, en moyenne tous les clients sont millionaires". En l'occurrence, on gagnerait souvent à s'intéresser à la médiane, ou encore mieux à la distribution des fréquences, souvent bien plus parlante et éclairante visuellement.
 
 ![Un bon contre-exemple, distribution des richesses par Philippe Rioux / La dépêche du midi, 2018 [^1]](media/distribution.jpg) 
 
 
-Bien sûr, la technique statistique, aussi essentielle soit-elle, ne suffit pas : pour comprendre un phénomène social, il faut toujours aussi interpréter les chiffres, même Si c'est un exercice parfois difficile. Et pour cause, interpréter implique de mobiliser des informations ou des concepts extérieurs à la technique mathématique, qu'ils soient issus d'une connaissance de terrain, d'une expertise professionnelle ou d'une discipline scientifique comme la sociologie.
+Bien sûr, la technique statistique, aussi essentielle soit-elle, ne suffit pas : pour comprendre un phénomène, il faut toujours aussi **interpréter** les chiffres, même si c'est un exercice parfois difficile. Et pour cause, interpréter implique de mobiliser des informations ou des concepts extérieurs à la technique mathématique, qu'ils soient issus d'une connaissance de terrain, d'une expertise métier, ou d'une discipline scientifique comme la sociologie.
 
-A sa modeste échelle, ce blog offre donc un cadre pour mes explorations curieuses et permettra peut-être de montrer qu'avec des **données bien employées et de méthodes statistiques simples, on peut comprendre davantage et - sait-on jamais ? - agir mieux**.
+A sa modeste échelle, ce blog offre donc un cadre pour mes explorations curieuses et permettra peut-être de montrer qu'avec des **données bien employées et les bonnes méthodes statistiques, on peut comprendre davantage et - sait-on jamais ? - agir mieux**.
 
 Vos remarques et commentaires constructifs seront évidemment les bienvenus.
 
