--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Un blog d'analyse de données de société"
+title: "Un blog de data analyse"
 site: distill::distill_website
 listing: posts
 ---
